<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/notification_category">

        <SwitchPreference
            android:key="@string/daily_reminder_key"
            android:defaultValue="false"
            android:title="@string/daily_reminder_title"
            android:summary="@string/daily_reminder_summary"/>

        <SwitchPreference
            android:key="@string/new_release_key"
            android:defaultValue="false"
            android:title="@string/new_release_title"
            android:summary="@string/new_release_summary"
            android:summaryOn="@string/new_release_summary_on"
            android:summaryOff="@string/new_release_summary_off"/>

    </PreferenceCategory>
</PreferenceScreen>