<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_movie"
            android:title="@string/menu_movies"
            android:icon="@drawable/ic_movie_filter_black_24dp"/>
        <item
            android:id="@+id/menu_tv"
            android:title="@string/menu_tv_shows"
            android:icon="@drawable/ic_live_tv_black_24dp"/>
        <item
            android:id="@+id/menu_favorite"
            android:title="@string/menu_favorites"
            android:icon="@drawable/ic_favorite_black_24dp"/>
    </group>
    <item
        android:title="@string/div_label_controls">
        <menu>
            <item
                android:id="@+id/menu_reminder"
                android:title="@string/menu_settings_reminder"
                android:icon="@drawable/ic_notifications_black_24dp"/>
            <item
                android:id="@+id/menu_locale_setting"
                android:title="@string/locale_setting_title"
                android:icon="@drawable/ic_translate_black_24dp"/>
        </menu>
    </item>
    <item
        android:title="@string/others">
        <menu>
            <item
                android:id="@+id/menu_share"
                android:title="@string/share"
                android:icon="@drawable/ic_share_black_24dp"/>
            <item
                android:id="@+id/menu_rating"
                android:title="@string/rating"
                android:icon="@drawable/ic_star_black_24dp"/>
            <item
                android:id="@+id/menu_about"
                android:title="@string/about"
                android:icon="@drawable/ic_info_black_24dp"/>
        </menu>
    </item>
</menu>