<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/header"
    android:padding="16dp">
    <ImageView
        android:contentDescription="@string/icon_avatar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/movie_review_title"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/email_title"
        android:textSize="18sp"/>
</LinearLayout>